<resources>

    <!--  App  -->
    <string name="app_name">Breaking Bad Api</string>
    <string name="refresh_btn_title">Refresh</string>
    <string name="retry_btn_title">Retry</string>
    <string name="apply_btn_title">Apply</string>
    <string name="cancel_btn_title">Cancel</string>

    <!--  MenuItems  -->
    <string name="menu_item_search_title">Search</string>

    <!--  Characters  -->
    <string name="characters_nav_graph_title">Characters</string>
    <string name="characters_fragment_title">Characters</string>
    <string name="characters_details_nickname">\"%1$s\"</string>
    <string name="character_appeared_in">Character appeared in</string>
    <string name="img_desc_character">Character img</string>

    <!--  Appearance List Item  -->
    <string name="appearance_list_item_season">Season %1$s</string>

    <!--  Episodes  -->
    <string name="episodes_nav_graph_title">Episodes</string>
    <string name="episodes_fragment_title">Episodes</string>
    <string name="episode_list_item_title">%1$s.%2$s: \"%3$s\"</string>

    <!--  Episode Details  -->
    <string name="episode_details_season_title">Season</string>
    <string name="episode_details_episode_details">Episode</string>
    <string name="episode_details_characters_list_title">Characters</string>

    <!--  Search  -->
    <string name="fragment_search_hint">Search…</string>
    <string name="load_error">Oops</string>
    <string name="try_again">Try again</string>
    <string name="default_error_message">Something went wrong</string>
    <string name="default_emptyData_message">Nothing to show here</string>
    <string name="fragment_filter_title">Filter</string>
    <string name="filter_category_title">Category</string>
    <string name="filter_category_characters_title">Characters</string>
    <string name="filter_category_episodes_title">Episodes</string>
    <string name="start_typing_something">Start typing something…</string>

    <!--  Seasons  -->
    <string name="seasons_fragment_title">Seasons</string>
    <string name="seasons_fragment_details_title">Season %1$s</string>
    <string name="season_list_item_title">Season %1$s</string>
    <string name="fragment_seasons_list_all_episodes">All episodes</string>
    <string name="default_no_data_message">There\'s no data to show</string>
    <string name="img_desc_clear_btn">Clear button</string>
    <string name="img_desc_filter_btn">Filter button</string>

    <!--  Yandex Map  -->
    <string name="yandex_map_title">Yandex Map</string>

    <!--  Biometric  -->
    <string name="biometric">Biometric</string>

</resources>