<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/fragment_empty_data_message"
        style="@style/AppDefaultSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/default_emptyData_message"
        android:textColor="?defaultAppTextColor" />

    <LinearLayout
        android:id="@+id/fragment_empty_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragment_empty_error_title"
            style="@style/AppDefaultSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/default_error_message"
            android:textColor="?defaultAppTextColor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_empty_error_retry_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/try_again"
            android:textColor="@color/white" />

    </LinearLayout>

</FrameLayout>