<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/app_offset_large">

    <TextView
        android:id="@+id/fragment_search_filter_title"
        style="@style/AppDefaultTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/app_offset_extra_extra_large"
        android:text="@string/fragment_filter_title" />

    <TextView
        style="@style/AppDefaultSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/app_offset_large"
        android:text="@string/filter_category_title" />

    <CheckedTextView
        android:id="@+id/fragment_search_filter_isCharacter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/app_offset_medium"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:checkMark="?android:listChoiceIndicatorMultiple"
        android:gravity="center"
        android:paddingTop="@dimen/app_offset_medium"
        android:paddingBottom="@dimen/app_offset_medium"
        android:text="Characters" />

    <CheckedTextView
        android:id="@+id/fragment_search_filter_isEpisode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:checkMark="?android:listChoiceIndicatorMultiple"
        android:gravity="center"
        android:paddingTop="@dimen/app_offset_medium"
        android:paddingBottom="@dimen/app_offset_medium"
        android:text="Episodes" />

    <Button
        android:id="@+id/fragment_search_filter_btn_apply"
        style="@style/Widget.App.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/apply_btn_title" />

    <Button
        android:id="@+id/fragment_search_filter_btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/materialButtonOutlinedStyle"
        android:text="@string/cancel_btn_title" />

</LinearLayout>